codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_remote_server.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

  >_ OpenAI Codex (v0.156.1)

  Visit https://chatgpt.com/codex/settings/usage for up-to-date
  information on rate limits and credits

  Server:          unix:///tmp/codex-home/app-server-control/app-server-
                   control.sock (v0.133.0)

  Model:           gpt-5.1-codex-max (reasoning medium)
  Directory:       [[workspace]]
  Permissions:     Custom (workspace with network access, Ask for approval)
  Agents.md:       <none>

  Token usage:     750 total  (500 input + 250 output)
  Context window:  100% left (750 used / 272K)
  Limits:          data not available yet
